mderose123 - Fixed issue with overlapping elements on the homepage

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -8,6 +8,9 @@
     padding-top: 20px;
 }
 
+.scroll {
+    width: 1950px;
+}
 .centered {
     position: absolute;
     top: 50%;
